--- a/installation.html
+++ b/installation.html
@@ -117,6 +117,28 @@
             <div class="section">
               
                 <h1 id="installation-guide">Installation Guide</h1>
+<p>This section describes installing Canis Major Blockchain Adaptor:</p>
+<h1 id="requirments">Requirments</h1>
+<p>In order to execute Canis Major, it is needed to have previously installed the following software:
+ - NodeJS 12
+ - ORM Database (SQL, Postgres)</p>
+<p># Installation</p>
+<p>The following steps need to be performed to get Canis Major up and running:</p>
+<ol>
+<li>Download the software, using GitHub.</li>
+</ol>
+<p>``sh
+    git clone https://github.com/fiware-blockchain/canismajor</p>
+<pre><code>
+ 2. Install all required libraries using npm.
+
+```sh
+    cd canismajor
+    npm install
+</code></pre>
+<ol>
+<li>Configure the installation</li>
+</ol>
               
             </div>
           </div>
