--- a/installation.html
+++ b/installation.html
@@ -115,31 +115,159 @@
 <p># Installation</p>
 <p>The following steps need to be performed to get Canis Major up and running:</p>
 <ol>
-<li>Download the software, using GitHub.</li>
-</ol>
-<p>``sh
-    git clone https://github.com/fiware-blockchain/canismajor</p>
-<pre><code>
- 2. Install all required libraries using npm.
-
-```sh
-    cd canismajor
-    npm install
-</code></pre>
-<ol>
 <li>
-<p>Database Init/Migration
- <code>sh
-    DB_USERNAME=${DB_USERNAME} \
-    DB_PASSWORD=${DB_PASSWORD} \
-    DB_NAME=${DB_NAME} \
-    DB_HOST=${DB_HOST} \
-    DB_PORT=${DB_PORT} \
-    npm run create &amp;&amp; npm run migrate</code></p>
+<p>Download the software, using GitHub.</p>
+<p><code>sh
+git clone https://github.com/fiware-blockchain/canismajor</code></p>
 </li>
 <li>
-<p>Configure the installation
- <code>sh</code></p>
+<p>Install all required libraries using npm.</p>
+<p><code>sh
+cd canismajor
+npm install</code></p>
+</li>
+<li>
+<p>Database Init/Migration</p>
+<p><code>sh
+DB_USERNAME=${DB_USERNAME} \
+DB_PASSWORD=${DB_PASSWORD} \
+DB_NAME=${DB_NAME} \
+DB_HOST=${DB_HOST} \
+DB_PORT=${DB_PORT} \
+npm run create &amp;&amp; npm run migrate</code></p>
+</li>
+<li>
+<p>Configure the installation</p>
+<p><code>sh
+      - DB_NAME
+      - DB_HOST
+      - DB_PORT
+      - DB_DILECT
+      - DB_USERNAME
+      - DB_PASSWORD
+      - CM_PORT
+      - TRANSCTION_TIMEOUT
+      - DLT_TYPE  // eth or iota
+      - IOTA_ENDPOINT // iota config
+     // eth config
+      - RPC_ENDPOINT
+      - DEFAULT_GAS
+      - DEFAULT_GAS_PRICE
+      - AEI_CONTRACT_MODE
+      - CONTRACT_ADDRESS
+     // storage config
+      - STORAGE_TYPE // iota, ipfs or merkletree
+      - IPFS_HOST
+      - IPFS_PORT
+      - IPFS_PROTOCOL
+      - IPFS_AUTH_CODE
+      - IOTAMAM_HOST
+      - IOTAMAM_MODE</code></p>
+<table>
+<thead>
+<tr>
+<th>ENV Variable</th>
+<th align="center">Description</th>
+<th align="right">Example</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>DB_NAME</td>
+<td align="center">Name of the Database</td>
+<td align="right">cm</td>
+</tr>
+<tr>
+<td>DB_HOST</td>
+<td align="center">Database HOST name</td>
+<td align="right">localhost</td>
+</tr>
+<tr>
+<td>DB_PORT</td>
+<td align="center">Database PORT number</td>
+<td align="right">3306</td>
+</tr>
+<tr>
+<td>DB_DILECT</td>
+<td align="center">Database Dilect (sequlize ORM) can be mysql, postgres</td>
+<td align="right">mysql</td>
+</tr>
+<tr>
+<td>DB_USERNAME</td>
+<td align="center">Database User Name</td>
+<td align="right">root</td>
+</tr>
+<tr>
+<td>DB_PASSWORD</td>
+<td align="center">Database Password</td>
+<td align="right">root</td>
+</tr>
+<tr>
+<td>TRANSCTION_TIMEOUT</td>
+<td align="center">Transaction timeout</td>
+<td align="right">1000</td>
+</tr>
+<tr>
+<td>DLT_TYPE</td>
+<td align="center">Ledger or Blockchain Type (Can be eth or iota)</td>
+<td align="right">eth</td>
+</tr>
+<tr>
+<td>IOTA_ENDPOINT (optional)</td>
+<td align="center">IOTA Endpoint (required) when the DLT_TYPE=iota</td>
+<td align="right">'https://nodes.devnet.iota.org:443'</td>
+</tr>
+<tr>
+<td>RPC_ENDPOINT</td>
+<td align="center">Endpoint of the ethereum client</td>
+<td align="right">'http://127.0.0.1:8545'</td>
+</tr>
+<tr>
+<td>DEFAULT_GAS</td>
+<td align="center">Default GAS usage of the Eth Smart Contract</td>
+<td align="right">300000</td>
+</tr>
+<tr>
+<td>AEI_CONTRACT_MODE</td>
+<td align="center">AEI contract enabled or not</td>
+<td align="right">true</td>
+</tr>
+<tr>
+<td>CONTRACT_ADDRESS</td>
+<td align="center">Contract Address of the deployed smart contract</td>
+<td align="right">0xcd125237903865f39caf6443209c89bA70a4A385</td>
+</tr>
+</tbody>
+</table>
+</li>
+</ol>
+<p><strong>Storage Configuration</strong>   </p>
+<p><strong><em>ipfs</em></strong></p>
+<pre><code>| ENV Variable        | Description           | Example  |
+| STORAGE_TYPE | Storage type to store the payload (can be ipfs, iota or merkletree)     |    ipfs |
+| IPFS_HOST | IPFS host name     |    ipfs.infura.io |
+| IPFS_PORT | IPFS port number     |    5001 |
+| IPFS_PROTOCOL | IPFS protocol     |    https |
+| IPFS_AUTH_CODE (optional) | Bearer Auth code     |  " "   |
+</code></pre>
+<p><strong><em>IOTAMaM</em></strong></p>
+<pre><code>| ENV Variable        | Description           | Example  |
+| STORAGE_TYPE | Storage type to store the payload (can be ipfs, iota or merkletree)     |    iota |
+| IOTAMAM_HOST | IOTAMaM Host Name   |    https://nodes.devnet.iota.org |
+| IOTAMAM_MODE | IOTAMaM mode (can be public or private)     |    public |
+</code></pre>
+<p><strong><em>Merkle Tree</em></strong></p>
+<pre><code>| ENV Variable        | Description           | Example  |
+| STORAGE_TYPE | Storage type to store the payload (can be ipfs, iota or merkletree)     |    merkletree |
+</code></pre>
+<p>Configuration diagram 
+<img alt="config" src="https://raw.githubusercontent.com/FIWARE-Blockchain/tutorials.Step-by-Step/master/docs/config.png" /></p>
+<p>there configuration can be also mentioned in src/configuration/config.js</p>
+<ol>
+<li>
+<p>Running the CanisMajor</p>
+<p><code>sh
+    npm start</code></p>
 </li>
 </ol>
               
