deploy: 4ed6c2d33a51e78413daf6494b03444227696efd

--- a/installation.html
+++ b/installation.html
@@ -331,6 +331,9 @@
 </ol>
 <pre><code class="language-sh">    npm start
 </code></pre>
+<p>or in development mode:</p>
+<pre><code class="language-sh">    npm run dev
+</code></pre>
               
             </div>
           </div>
