deploy: e71df4232e0c03b02bb986594064e00b03aeca49

--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
             <div class="section">
               
                 <h1 id="canismajor-fiware-blockchain-adaptor">CanisMajor - FIWARE Blockchain Adaptor</h1>
-<p>CanisMajor is a blockchain adaptor that supports various DLT (Ethereum Client,IOTA, FABRIC chaincode (soon)), the adaptor aims to submit the data to DLT and works with NGSI-LD and NGSI-V2 as well.</p>
+<p>CanisMajor is a blockchain adaptor that supports various DLT (Ethereum Client,IOTA, FABRIC chaincode (soon)),
+the adaptor aims to submit the data to DLT and works with NGSI-LD and NGSI-V2 as well.</p>
 <p>The adaptor is not be recommended to work for public-permissionless blockchains (specially tokens, cryptocurrencies).</p>
 <p>CanisMajor Adaptor recommend using AEI contract Model for the Ethereum Clients.
 AEI (Asset,Event, Identity) Smart Contract is written in Solidity using ERC721 standard (NFT).</p>
@@ -169,5 +170,5 @@ AEI (Asset,Event, Identity) Smart Contract is written in Solidity using ERC721 s
 
 <!--
 MkDocs version : 1.2.3
-Build Date UTC : 2022-01-20 08:24:32.153873+00:00
+Build Date UTC : 2022-01-20 08:28:57.396791+00:00
 -->
