--- a/installation.html
+++ b/installation.html
@@ -107,13 +107,13 @@
             <div class="section">
               
                 <h1 id="installation-guide">Installation Guide</h1>
-<p>This section describes installing Canis Major Blockchain Adaptor:</p>
-<h1 id="requirments">Requirments</h1>
-<p>In order to execute Canis Major, it is needed to have previously installed the following software:
+<p>This section describes installing CanisMajor Blockchain Adaptor:</p>
+<h1 id="requirements">Requirements</h1>
+<p>In order to execute CanisMajor, it is needed to have previously installed the following software:
  - NodeJS 12
  - ORM Database (SQL, Postgres)</p>
 <p># Installation</p>
-<p>The following steps need to be performed to get Canis Major up and running:</p>
+<p>The following steps need to be performed to get CanisMajor up and running:</p>
 <ol>
 <li>Download the software, using GitHub.</li>
 </ol>
