deploy: 7a92dbb9a516c56b7c045ac4bfdfce4fc7070499

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <a href="index.html" class="icon icon-home"> CanisMajor
         </a><div role="search">
   <form id ="rtd-search-form" class="wy-form" action="./search.html" method="get">
-      <input type="text" name="q" placeholder="Search docs" title="Type search term here" />
+      <input type="text" name="q" placeholder="Search docs" aria-label="Search docs" title="Type search term here" />
   </form>
 </div>
       </div>
@@ -75,7 +75,7 @@
       <div class="wy-nav-content">
         <div class="rst-content"><div role="navigation" aria-label="breadcrumbs navigation">
   <ul class="wy-breadcrumbs">
-    <li><a href="index.html" class="icon icon-home" alt="Docs"></a> &raquo;</li>
+    <li><a href="index.html" class="icon icon-home" aria-label="Docs"></a> &raquo;</li>
       <li>Home</li>
     <li class="wy-breadcrumbs-aside">
           <a href="https://github.com/fiware/CanisMajor/docs/edit/master/docs/index.md" class="icon icon-github"> Edit on GitHub</a>
@@ -158,6 +158,6 @@ To run them use:</p>
 </html>
 
 <!--
-MkDocs version : 1.4.2
-Build Date UTC : 2023-05-02 13:08:53.594713+00:00
+MkDocs version : 1.4.3
+Build Date UTC : 2023-05-05 07:02:02.283778+00:00
 -->
