--- a/adrs/transparent-proxy.html
+++ b/adrs/transparent-proxy.html
@@ -36,7 +36,7 @@
           <a href="../index.html" class="icon icon-home"> CanisMajor
         </a><div role="search">
   <form id ="rtd-search-form" class="wy-form" action="../search.html" method="get">
-      <input type="text" name="q" placeholder="Search docs" title="Type search term here" />
+      <input type="text" name="q" placeholder="Search docs" aria-label="Search docs" title="Type search term here" />
   </form>
 </div>
       </div>
@@ -67,7 +67,7 @@
       <div class="wy-nav-content">
         <div class="rst-content"><div role="navigation" aria-label="breadcrumbs navigation">
   <ul class="wy-breadcrumbs">
-    <li><a href="../index.html" class="icon icon-home" alt="Docs"></a> &raquo;</li>
+    <li><a href="../index.html" class="icon icon-home" aria-label="Docs"></a> &raquo;</li>
       <li>Use a transparent proxy for forward data to CanisMajor</li>
     <li class="wy-breadcrumbs-aside">
           <a href="https://github.com/fiware/CanisMajor/docs/edit/master/docs/adrs/transparent-proxy.md" class="icon icon-github"> Edit on GitHub</a>
